# personal-price-tracker

./: .env.example  .gitignore  README.md  agents.md  pyproject.toml
.github/scripts/: write-job-summary.sh
.github/workflows/: scheduled-price-check.yml
config/: products.yaml  settings.yaml
src/price_tracker/: __init__.py  __main__.py  cli.py
src/price_tracker/adapters/: __init__.py  base.py  ergobaby.py  fake.py  woolino.py
src/price_tracker/alerts/: __init__.py  base.py  dry_run.py  email.py  formatting.py  service.py
src/price_tracker/config/: __init__.py  loader.py
src/price_tracker/database/: __init__.py  storage.py
src/price_tracker/models/: __init__.py  price.py  product.py  settings.py
src/price_tracker/services/: __init__.py  checker.py  discount.py
src/price_tracker/utils/: __init__.py  http_client.py
tests/: test_checker.py  test_cli.py  test_config.py  test_discount.py  test_ergobaby_adapter.py  test_fake_adapter.py  test_http_client.py  test_notifications.py  test_storage.py  test_woolino_adapter.py
tests/fixtures/ergobaby/: omni_deluxe.html
tests/fixtures/woolino/: sleep_bag.html  unavailable.html
