[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-price-tracker"
version = "0.1.0"
description = "A modular, configuration-driven personal shopping price tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0.1,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[project.scripts]
price-tracker = "price_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --basetemp=.tmp/pytest -p no:cacheprovider"
testpaths = ["tests"]
